--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,9 @@ AllCops:
   Excludes:
     - db/**/*.rb
 
+Documentation:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 100
 Style/FrozenStringLiteralComment:
