--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "stimulus": "^1.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
