--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,5 +20,6 @@ Metrics/LineLength:
 Style/ClassAndModuleChildren:
   Exclude:
     - 'app/api/v1/*.rb'
+    - 'app/workers/**/*.rb'
 Style/FrozenStringLiteralComment:
   Enabled: false
