--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,8 @@ Metrics/BlockLength:
     - 'spec/**/*.rb'
 Metrics/LineLength:
   Max: 100
+Metrics/AbcSize:
+  Max: 17 # default = 15
 
 Style/ClassAndModuleChildren:
   Exclude:
