--- a/config/settings.yml
+++ b/config/settings.yml
@@ -26,6 +26,23 @@ VOTABLE:
   MAJORITY:
     THRESHOLD: 75 # in percent
 
+STAMP::FLAG:
+  CREATOR:
+    PRIZE: 10 # created good stuff
+    PENALTY: -100 # created trash
+  UPVOTER:
+    PRIZE: 1 # upvoted good stuff
+    PENALTY: -10 # upvoted trash
+  DOWNVOTER:
+    PRIZE: 5 # downvoted trash
+    PENALTY: -5 # downvoted good stuff
+VOTABLE:
+  POWER:
+    THRESHOLD: 10 # min power a stamp needs to continue conclusion
+    # if a votable falls below this, it will simply get rejected
+  MAJORITY:
+    THRESHOLD: 75 # in percent
+
 FLAGS:
   # # write access
   # - any
