Trigger ConcludeJobs after stamp creation
for now, it concludes the job after 3 days

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -12,6 +12,8 @@ BOT:
     VOTING_LIMIT: 100_000
     STAMP_CREATION_LIMIT: 10_000
 
+STAMP:
+  CONCLUDE_IN_HOURS: 72 # three days
 STAMP::LABEL:
   CREATOR:
     PRIZE: 10 # created good stuff
