--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
     - log/**/*
     - node_modules/**/*
     - notes/**/*
+    - config/environments/production.rb
 
 Documentation:
   Enabled: false
