Enable binding pry in guard container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     volumes:
       - .:/stamp
     tty: true # color the logs
+    stdin_open: true
     environment:
       RAILS_ENV: test
       RACK_ENV: test
